--- a/src/Header.css
+++ b/src/Header.css
@@ -5,6 +5,9 @@
   width: 100%;
   overflow: hidden;
 }
+.welcome{
+  font-weight: 700;
+}
 .navbar{
   width: 600px;
   z-index: 1000;
@@ -32,7 +35,6 @@
 
 .navbar ul li a{
   text-decoration: none;
-  color: #000000;
 }
 .navbar a:hover{
   color: #FF4A54;
@@ -105,9 +107,10 @@
     }
     .tm{
       display: block;
-      position: fixed;
-      top: 50px;
-      right: 5px;
+      /* position: fixed; */
+      position: absolute;
+      top: 100px;
+      left: 10px;
     }
     .navbar ul{
       flex-direction: column;
