--- a/src/Header.css
+++ b/src/Header.css
@@ -37,7 +37,7 @@
   text-decoration: none;
 }
 .navbar a:hover{
-  color: #FF4A54;
+  color: #FF4D50;
 }
 .wrap{
   width: 600px;
@@ -57,25 +57,22 @@
   
   .searchTerm {
     width: 100%;
-    border: 3px solid #FF4A54;
-    background-color: #FF4A54;
+    border: 3px solid #FF4D50;
+    background-color: #FF4D50;
     border-right: none;
     padding: 5px;
     height: 20px;
     border-radius: 20px 0px 0px 20px;
     outline: none;
-    color: #e7e7e7;
+    color: #fff;
   }
   
-  .searchTerm:focus{
-    color: #ffffff;
-  }
   
   .searchButton {
     width: 50px;
     height: 36px;
-    border: 1px solid #FF4A54;
-    background: #FF4A54;
+    border: 1px solid #FF4D50;
+    background: #FF4D50;
     padding: 5px;
     border-radius: 0 20px 20px 0;
     cursor: pointer;
