--- a/src/cardui.css
+++ b/src/cardui.css
@@ -1,6 +1,6 @@
 
 .card{
-    background-color: #FF4A54;
+    background-color: #FF4D50;
     border-radius: 20px;
     border: 1px solid white;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.267);
@@ -26,23 +26,6 @@
     opacity: 0.7;
 }
 
-
-.card1>.container::after{
-    background-image: linear-gradient(
-        120deg,
-        #00000000,
-        #00000000
-    );
-}
-.card1>.container:hover::after{
-    background-image: linear-gradient(
-        120deg,
-
-        #ffffff28,
-        #ffffff28
-    );   
-}
-
 .details{
     padding: 20px 10px;
 }
@@ -52,9 +35,10 @@
     font-size: 18px;
     margin: 10px 0 15px 0;
     text-transform: uppercase;
+    letter-spacing: 1.2px;
 }
 .details>p{
-    color: #000000;
+    color: #121212;
     font-size: 15px;
     line-height: 30px;
     font-weight: 400;
