--- a/src/theme.css
+++ b/src/theme.css
@@ -1,9 +1,9 @@
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
 :root {
-  --color-primary: #ff3333;
+  --color-primary: #ff2929;
   --color-secondary: #ff7070;
-  --color-yellow: #fabb00;
+  --color-yellow: #fffb00;
 }
 
 .toggle-container {
@@ -27,7 +27,7 @@
 .toggle .slider {
   position: absolute; top: 0;left: 0;
   cursor: pointer; right: 0; bottom: 0;
-  background-color: rgb(92, 236, 255);
+  background-color: rgb(255, 43, 43);
   -webkit-transition: 0.4s;
   transition: 0.4s;
   
@@ -38,7 +38,7 @@
   color: var(--color-yellow);
   padding: 0.3rem; left: 0; top: 0%;
   transform: translate(0, -50%);
-  background: rgb(0, 255, 242);
+  background: rgb(255, 44, 44);
   -webkit-transition: 0.4s;
   transition: all 0.4s; z-index: 2;
   font-size: 1.1rem;
