--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,38 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
+ 
+  
 }
+/*=== FADE IN  ===*/
+.fadein{
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+
 .App-dark a{
   color: #ffffff ;
 }
