--- a/src/cardui.css
+++ b/src/cardui.css
@@ -1,6 +1,6 @@
 
 .card{
-    background-color: #FF4D50;
+    background-color: #4d94ff;
     border-radius: 20px;
     border: 1px solid white;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.267);
